--- a/code/pages/site-participant-status.html
+++ b/code/pages/site-participant-status.html
@@ -2,7 +2,7 @@
   <div class="container main-container common-2-rows-grid">
     <div class="container flex-container">
       <breadcrumb-navigator></breadcrumb-navigator>
-      <h5 class="generic-title">Participant ID: {{@participantId}} - Site Participant's Status</h5>
+      <h5 class="generic-title">{{@title}}</h5>
       <webc-template class="w-100" data-view-model="@" template="alert"></webc-template>
     </div>
 
