--- a/code/modals/edit-site-contact.html
+++ b/code/modals/edit-site-contact.html
@@ -1,14 +1,11 @@
 <h2 slot="header">Edit Contact</h2>
 
-<form class="m-2">
-  <div class="d-flex flex-column justify-content-between">
+  <div class="modal-form-container">
     <div class="form-group">
       <label class="col-form-label">{{ @site.did.label }}</label>
       <input class="form-control" data-view-model="@site.did" />
     </div>
-  </div>
 
-  <div class="d-flex flex-column justify-content-between">
     <div class="form-group">
       <label class="col-form-label">{{ @site.name.label }}</label>
       <input class="form-control" data-view-model="@site.name" />
@@ -16,4 +13,4 @@
   </div>
 
   <button class="btn btn-primary mt-2" slot="footer" data-tag="update-contact">Submit</button>
-</form>
+
