--- a/code/pages/site-participants.html
+++ b/code/pages/site-participants.html
@@ -18,23 +18,23 @@
                             <div class="col-md-1">Withdrawn</div>
                             <div class="col-md-1">Declined</div>
                             <div class="col-md-1">In Treatment</div>
-                            <div class="col-md-2">End of treatment</div>
+                            <div class="col-md-1">End of treatment</div>
                             <div class="col-md-1">Completed</div>
                             <div class="col-md-1">Discontinued</div>
                             <div class="col-md-1">Scr. failed</div>
                         </div>
                         <div class="row statistics">
-                            <div class="col-md-1">{{@statistics.planned}}</div>
-                            <div class="col-md-1">{{@statistics.screened}}</div>
-                            <div class="col-md-1">{{@statistics.enrolled}}</div>
-                            <div class="col-md-2">{{@statistics.percentageEnrolled}} %</div>
-                            <div class="col-md-1">{{@statistics.withdrew}}</div>
-                            <div class="col-md-1">{{@statistics.declined}}</div>
-                            <div class="col-md-1">{{@statistics.inTreatment}}</div>
-                            <div class="col-md-2">{{@statistics.endOfTreatment}}</div>
-                            <div class="col-md-1">{{@statistics.completed}}</div>
-                            <div class="col-md-1">{{@statistics.discontinued}}</div>
-                            <div class="col-md-1">{{@statistics.screenFailed}}</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.planned}}</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.screened}}</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.enrolled}}</div>
+                            <div class="col-md-2 statistics-item">{{@statistics.percentageEnrolled}} %</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.withdrew}}</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.declined}}</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.inTreatment}}</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.endOfTreatment}}</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.completed}}</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.discontinued}}</div>
+                            <div class="col-md-1 statistics-item">{{@statistics.screenFailed}}</div>
                         </div>
                         <webc-template data-view-model="@" template="table-site-participants"></webc-template>
                     </div>
