--- a/code/modals/add-new-trial-consent.html
+++ b/code/modals/add-new-trial-consent.html
@@ -88,7 +88,7 @@
       ></psk-files-chooser>
     </div>
     <span class="d-flex flex-row" data-if="@consent.visitsAndProceduresDocument.invalidValue">
-      <i class="red-invalid fas fa-times mr-2"></i>
+      <!-- <i class="red-invalid fas fa-times mr-2"></i> -->
       <small class="form-text text-danger">No file selected or file could not be parsed</small>
     </span>
   </div>
