--- a/code/pages/sites.html
+++ b/code/pages/sites.html
@@ -32,7 +32,7 @@
                         </button>
                     </div>
                     <div class="option-button">
-                        <button class="btn btn-primary" data-tag="add-site">Add Site</button>
+                        <button class="btn btn-primary" data-tag="add-site" disabled="@isStatusNegative">Add Site</button>
                     </div>
                 </div>
 
