--- a/code/pages/trial-consents.html
+++ b/code/pages/trial-consents.html
@@ -9,7 +9,7 @@
         <main>
             <div class="d-flex flex-column w-100 h-100">
                 <div class="d-flex w-100 justify-content-end mb-3">
-                    <button class="btn btn-primary" data-tag="add-consent">Add Consent</button>
+                    <button class="btn btn-primary" data-tag="add-consent" disabled="@isStatusNegative">Add Consent</button>
                 </div>
 
                 <div data-if="@consentsArrayNotEmpty">
